--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,15 @@
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font: 100% Helvetica, sans-serif;
   color: #2d547b;
+  height: 100vh;
 }
 /*# sourceMappingURL=style.css.map */
