--- a/src/style.scss
+++ b/src/style.scss
@@ -1,16 +1,22 @@
 $font-stack: Helvetica, sans-serif;
 $primary-color: #2d547b;
 
-@mixin flexenter {
+@mixin flexCenter {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 body {
-  @include flexenter();
-  
   font: 100% $font-stack;
   color: $primary-color;
-  height: 100vh;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+.home {
+  @include flexCenter();
 }
