--- a/src/style.scss
+++ b/src/style.scss
@@ -28,3 +28,39 @@ a {
   text-decoration: none;
   color: $primary-color;
 }
+
+.burger-icon {
+  @include burger(25px, 3px, 5px, #222);
+}
+.circle.is-active .burger-icon {
+  @include burger-to-cross;
+}
+
+
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-2%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes shrink {
+  0% {
+    width: 95%;
+  }
+  100% {
+    width: 90%;
+  }
+}
